--- a/index.html
+++ b/index.html
@@ -5,37 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Festival Transformasi Pendidikan</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-  // Set the target date
-  var targetDate = new Date("October 14, 2024 00:00:00").getTime();
-
-  // Update the countdown every second
-  var countdownFunction = setInterval(function() {
-    var now = new Date().getTime();
-    var timeLeft = targetDate - now;
-
-    // Time calculations
-    var days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
-    var hours = Math.floor((timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
-
-    // Display the result
-    document.getElementById("countdown").innerHTML = days + "d " + hours + "h " 
-    + minutes + "m " + seconds + "s ";
-
-    // If the countdown is finished
-    if (timeLeft < 0) {
-      clearInterval(countdownFunction);
-      document.getElementById("countdown").innerHTML = "Launched!";
-    }
-  }, 1000);
-</script>
     <link
-      href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://i.ibb.co.com/tmK6GSZ/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://i.ibb.co.com/F7TzwCP/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://i.ibb.co.com/D70CCD8/favicon-16x16.png"
+    />
+    <meta name="msapplication-TileColor" content="#224679" />
+    <meta name="theme-color" content="#234998" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
     <style>
       /* Full screen video background */
       .video-background {
@@ -58,118 +53,81 @@
         z-index: -1;
       }
     </style>
-  </head>
-  <body class="relative">
-   
-    </div>
 
+    <script>
+      // Set the target date
+      var targetDate = new Date("October 14, 2024 00:00:00").getTime();
+
+      // Update the countdown every second
+      var countdownFunction = setInterval(function () {
+        var now = new Date().getTime();
+        var timeLeft = targetDate - now;
+
+        // Time calculations
+        var days = Math.floor(timeLeft / (1000 * 60 * 60 * 24));
+        var hours = Math.floor(
+          (timeLeft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
+        );
+        var minutes = Math.floor((timeLeft % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((timeLeft % (1000 * 60)) / 1000);
+
+        // Display the result
+        document.getElementById("countdown").innerHTML =
+          days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+
+        // If the countdown is finished
+        if (timeLeft < 0) {
+          clearInterval(countdownFunction);
+          document.getElementById("countdown").innerHTML = "Launched!";
+        }
+      }, 1000);
+    </script>
+  </head>
+
+  <body class="position-relative bg-primary">
     <!-- Content -->
     <div
-      class="min-h-screen flex flex-col items-center justify-center z-10 relative"
+      class="min-vh-100 d-flex flex-column justify-content-center align-items-center"
     >
-      <div class="text-center space-y-8">
-       <!-- Logo -->
+      <div class="text-center">
+        <!-- Logo -->
+        <a href="https://ibb.co.com/G0p7Xvq">
+          <img
+            src="https://i.ibb.co.com/6mwY2Rk/LOGO-FESTIVAL-TPAsset-3.png"
+            alt="LOGO-FESTIVAL-TPAsset-3"
+            width="60%"
+            class="img-fluid mb-4"
+          />
+        </a>
 
-<div>
-        <img class="h-auto max-w-full rounded-lg" src="https://bbgpjateng.kemdikbud.go.id/assets/uploads/media-uploader/logo-bbgp-jawa-tengah-new-warna1683098302.png" alt="">
-    </div>
+        <!-- Title -->
+        <h1 class="display-4 fw-bold text-center text-white">BBGP JATENG</h1>
+        <div class="d-flex justify-content-center align-items-center mt-4 mb-5">
+          <!-- Countdown -->
+          <div class="bg-danger text-white py-3 px-4 rounded">
+            <p id="countdown" class="h4 mb-0">Waktu</p>
+          </div>
 
-<!-- Title -->
-<h1 class="text-4xl md:text-6xl font-bold tracking-tight">
-  Festival Transformasi Pendidikan
-</h1>
-        <p class="text-lg md:text-2xl mt-4">
-          Segera dibuka! Siapkan diri, kakak!
-        </p>
-
-        <!-- Countdown -->
-<div class="flex justify-center">
-  <div class="bg-gray-800 py-4 px-8 rounded-lg">
-    <p id="countdown" class="text-xl text-gray-400">Loading...</p>
-  </div>
-</div>
-
-        <!-- Social Media Icons (Rounded) -->
-        <div class="flex justify-center space-x-6 mt-8">
-          <a
-            href="https://instagram.com/bbgpjateng"
-            class="bg-gray-700 p-3 rounded-full text-gray-400 hover:text-white"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.328 3.608 1.302.975.975 1.24 2.242 1.302 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.328 2.633-1.302 3.608-.975.975-2.242 1.24-3.608 1.302-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.328-3.608-1.302-.975-.975-1.24-2.242-1.302-3.608-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.062-1.366.328-2.633 1.302-3.608.975-.975 2.242-1.24 3.608-1.302C8.416 2.175 8.796 2.163 12 2.163M12 0C8.741 0 8.332.014 7.052.072 5.775.129 4.506.38 3.446 1.44 2.385 2.501 2.134 3.771 2.077 5.048 2.019 6.328 2.006 6.737 2.006 10s.013 3.672.071 4.952c.057 1.277.308 2.547 1.369 3.608 1.06 1.061 2.33 1.312 3.607 1.369 1.28.058 1.69.071 4.951.071s3.672-.013 4.952-.071c1.277-.057 2.547-.308 3.608-1.369 1.061-1.06 1.312-2.33 1.369-3.607.058-1.28.071-1.69.071-4.951s-.013-3.672-.071-4.952c-.057-1.277-.308-2.547-1.369-3.608C19.547.38 18.277.129 17 .072 15.721.014 15.311 0 12 0zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162S15.403 5.838 12 5.838zm0 10.162c-2.209 0-4-1.791-4-4s1.791-4 4-4 4 1.791 4 4-1.791 4-4 4zm6.406-11.845a1.44 1.44 0 1 1 0-2.88 1.44 1.44 0 0 1 0 2.88z"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://twitter.com/bbgpjateng"
-            class="bg-gray-700 p-3 rounded-full text-gray-400 hover:text-white"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M23.954 4.569c-.885.392-1.83.656-2.825.775a4.932 4.932 0 0 0 2.163-2.724 9.864 9.864 0 0 1-3.127 1.195 4.916 4.916 0 0 0-8.384 4.482A13.95 13.95 0 0 1 1.671 3.149a4.918 4.918 0 0 0 1.523 6.573 4.902 4.902 0 0 1-2.228-.616c-.054 2.281 1.581 4.415 3.946 4.89a4.935 4.935 0 0 1-2.224.085 4.93 4.93 0 0 0 4.6 3.419 9.868 9.868 0 0 1-6.102 2.105c-.397 0-.788-.023-1.175-.067a13.945 13.945 0 0 0 7.548 2.211c9.057 0 14.01-7.513 14.01-14.01 0-.214-.005-.428-.014-.641A10.025 10.025 0 0 0 24 4.59z"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://facebook.com/bbgpjateng"
-            class="bg-gray-700 p-3 rounded-full text-gray-400 hover:text-white"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M22.676 0H1.326C.593 0 0 .594 0 1.326v21.348C0 23.406.594 24 1.326 24h11.49v-9.294H9.847v-3.418h2.969V8.414c0-2.938 1.794-4.539 4.415-4.539 1.255 0 2.336.093 2.65.135v3.073h-1.818c-1.429 0-1.705.678-1.705 1.673v2.194h3.416l-.445 3.418h-2.971V24h5.825c.732 0 1.326-.594 1.326-1.326V1.326C24 .593 23.406 0 22.676 0z"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://youtube.com/@bbgpjateng"
-            class="bg-gray-700 p-3 rounded-full text-gray-400 hover:text-white"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M23.498 6.186a2.978 2.978 0 0 0-2.095-2.118C19.522 3.684 12 3.684 12 3.684s-7.522 0-9.403.384a2.979 2.979 0 0 0-2.095 2.118 29.01 29.01 0 0 0-.502 5.307c-.012 1.821-.012 3.641.001 5.462a29.015 29.015 0 0 0 .502 5.307 2.978 2.978 0 0 0 2.095 2.118c1.88.384 9.403.384 9.403.384s7.522 0 9.403-.384a2.978 2.978 0 0 0 2.095-2.118 29.051 29.051 0 0 0 .502-5.307c.012-1.821.012-3.641-.001-5.462a29.054 29.054 0 0 0-.502-5.307zm-13.498 9.361V8.453l6.25 3.547-6.25 3.547z"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://tiktok.com/@bbgpjateng"
-            class="bg-gray-700 p-3 rounded-full text-gray-400 hover:text-white"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-6 w-6"
-              fill="currentColor"
-              viewBox="0 0 24 24"
-            >
-              <path
-                d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm4.755 8.49c-1.335.09-2.407-.85-2.407-2.188h-.003v-.023h-1.91v8.898c0 1.424-1.153 2.578-2.576 2.578a2.581 2.581 0 0 1-1.483-4.672 2.522 2.522 0 0 0-.748-.117c-1.426 0-2.579 1.153-2.579 2.578 0 1.424 1.153 2.578 2.579 2.578 1.424 0 2.578-1.154 2.578-2.578V7.587c1.083.813 2.437 1.302 3.899 1.302v-.399z"
-              />
-            </svg>
-          </a>
+          <!-- Narahubung -->
+          <div class="ms-4 bg-white text-dark py-3 px-4 rounded">
+            <p class="h4 mb-0">
+              <a
+                href="https://wa.me/6282143168887"
+                class="text-dark text-decoration-none"
+                target="_blank"
+              >
+                Narahubung: 0821 4316 8887
+              </a>
+            </p>
+          </div>
         </div>
+
+        <br />
+        <br />
       </div>
     </div>
-
-    <script src="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.js"></script>
+    <!-- Bootstrap JS and icons -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
   </body>
 </html>
